# StuPlayer

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/planx/stuplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  StuPlayer.cpp  StuPlayer.h  VideoChannel.cpp  VideoChannel.h  androidlog.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/planx/stuplayer/: MainActivity.java  StuPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/planx/stuplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
